--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -141,6 +141,29 @@
           <button type="submit" class="btn btn-lg btn-primary submit">Submit</button>
           </form>
         </div>
+ <!-- Modal -->
+ <div id="results-modal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h2 class="modal-title"><strong>Best Match</strong></h2>
+      </div>
+      <div class="modal-body">
+        <h2 id="match-name"></h2>
+        <img id="match-img" src="" alt="">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
     </body>
   </html>
 
@@ -161,6 +184,10 @@
 
           $.post("/api/friends", newFriend, function (data) {
         console.log(data);
+        $("#match-name").text(data.name);
+          $("#match-img").attr("src", data.photo);
+          // Show the modal with the best match
+          $("#results-modal").modal("toggle");
               });
               clear()
    
