--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -38,7 +38,7 @@
             <option value="5">5 (Strongly Agree)</option>
           </select>
 
-          <!-- <h3><strong>Question 2</strong></h3>
+          <h3><strong>Question 2</strong></h3>
           <h4>You often feel shy at social events.</h4>
           <select class="chosen-selection" id="question2">
             <option value=""></option>
@@ -135,7 +135,7 @@
             <option value="3">3</option>
             <option value="4">4</option>
             <option value="5">5 (Strongly Agree)</option>
-          </select> -->
+          </select>
           <br>
           <br>
           <button type="submit" class="btn btn-lg btn-primary submit">Submit</button>
